# fa-alchemy-test

./: .gitignore  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_05_2129-e0beb42a4296_create_table_notes.py
app/: dependencies.py  main.py
app/api/notes/: crud.py  dependencies.py  schemas.py  views.py
app/core/: config.py  database.py
app/core/models/: __init__.py  notes.py
app/routers/: __init__.py  notes.py
